<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:ems="10"
        android:hint="@string/fname"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="298dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:ems="10"
        android:hint="@string/lname"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/editTextEmail2"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@._"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/editTextPass1"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="183dp"
        android:ems="10"
        android:hint="@string/choosePass"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/editTextPass2"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="216dp"
        android:ems="10"
        android:hint="@string/retypePass"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHint="@android:color/darker_gray"/>

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/editTextFirstName"
        android:layout_marginBottom="122dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/cancel"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonSignUp2"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextFirstName"
        android:layout_alignTop="@+id/buttonCancel"
        android:background="@color/colorPrimary"
        android:text="@string/signUp"
        android:textColor="@android:color/background_light" />

</RelativeLayout>