<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHighlight="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="174dp"
        android:ems="10"
        android:hint="@string/hintPass"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColorHighlight="@android:color/darker_gray"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editTextPass"
        android:layout_marginTop="255dp"
        android:text="@string/login"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextPass"
        android:layout_alignTop="@+id/buttonLogin"
        android:text="@string/signUp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white" />

</RelativeLayout>