<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThreadlistActivity">

    <TextView
        android:id="@+id/textViewFullName"
        android:layout_width="309dp"
        android:layout_height="41dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="11dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ImageButton
        android:id="@+id/imageButtonLogout"
        android:layout_width="59dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:contentDescription="@string/logout"
        android:scaleType="fitXY"
        android:tint="@android:color/black"
        app:srcCompat="@drawable/ic_logout" />

    <EditText
        android:id="@+id/editTextAddNewThread"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textViewFullName"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/addNewThread"
        android:inputType="textPersonName" />

    <ImageButton
        android:id="@+id/imageButtonAddNewThread"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/editTextAddNewThread"
        android:layout_toEndOf="@+id/textViewFullName"
        android:background="@null"
        android:scaleType="fitXY"
        android:tint="@color/colorAccent"
        app:srcCompat="@drawable/ic_add" />

    <TextView
        android:id="@+id/textViewCurrentThread"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="63dp"
        android:text="@string/currentThread"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <ListView
        android:id="@+id/listViewThreads"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp" />

</RelativeLayout>